--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Kabi</title>
   </head>
   <body>
+    <h1>My page</h1>
 
   </body>
 </html>
